// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildOpenUiRepairPrompt > lists every missing state declaration before the draft and keeps the full hint list stable 1`] = `
"The previous OpenUI draft cannot be committed yet. Automatic repair attempt 1 of 1.
The draft excerpt below may be truncated. Fix every listed missing \`$var\` declaration even when some references are not visible in the excerpt.
The draft is syntactically valid but fails a product-quality check.
Use the current committed valid OpenUI source only as fallback context.
Stay close to the model draft below and fix only the listed quality issues with the smallest possible diff.
Do not rewrite unrelated parts, change unflagged behavior, or introduce new features.
Return a complete corrected program.

Original user request:
Build a 20-question quiz.

Current committed valid OpenUI source:
root = AppShell([])

Quality issues:
- undefined-state-reference in root: State reference \`$q1\` is missing a top-level declaration with a literal initial value. For example, add \`$q1 = ""\`.
- undefined-state-reference in root: State reference \`$q2\` is missing a top-level declaration with a literal initial value. For example, add \`$q2 = ""\`.
- undefined-state-reference in root: State reference \`$q3\` is missing a top-level declaration with a literal initial value. For example, add \`$q3 = ""\`.
- undefined-state-reference in root: State reference \`$q4\` is missing a top-level declaration with a literal initial value. For example, add \`$q4 = ""\`.
- undefined-state-reference in root: State reference \`$q5\` is missing a top-level declaration with a literal initial value. For example, add \`$q5 = ""\`.
- undefined-state-reference in root: State reference \`$q6\` is missing a top-level declaration with a literal initial value. For example, add \`$q6 = ""\`.
- undefined-state-reference in root: State reference \`$q7\` is missing a top-level declaration with a literal initial value. For example, add \`$q7 = ""\`.
- undefined-state-reference in root: State reference \`$q8\` is missing a top-level declaration with a literal initial value. For example, add \`$q8 = ""\`.
- undefined-state-reference in root: State reference \`$q9\` is missing a top-level declaration with a literal initial value. For example, add \`$q9 = ""\`.
- undefined-state-reference in root: State reference \`$q10\` is missing a top-level declaration with a literal initial value. For example, add \`$q10 = ""\`.
- undefined-state-reference in root: State reference \`$q11\` is missing a top-level declaration with a literal initial value. For example, add \`$q11 = ""\`.
- undefined-state-reference in root: State reference \`$q12\` is missing a top-level declaration with a literal initial value. For example, add \`$q12 = ""\`.
- undefined-state-reference in root: State reference \`$q13\` is missing a top-level declaration with a literal initial value. For example, add \`$q13 = ""\`.
- undefined-state-reference in root: State reference \`$q14\` is missing a top-level declaration with a literal initial value. For example, add \`$q14 = ""\`.
- undefined-state-reference in root: State reference \`$q15\` is missing a top-level declaration with a literal initial value. For example, add \`$q15 = ""\`.
- undefined-state-reference in root: State reference \`$q16\` is missing a top-level declaration with a literal initial value. For example, add \`$q16 = ""\`.
- undefined-state-reference in root: State reference \`$q17\` is missing a top-level declaration with a literal initial value. For example, add \`$q17 = ""\`.
- undefined-state-reference in root: State reference \`$q18\` is missing a top-level declaration with a literal initial value. For example, add \`$q18 = ""\`.
- undefined-state-reference in root: State reference \`$q19\` is missing a top-level declaration with a literal initial value. For example, add \`$q19 = ""\`.
- undefined-state-reference in root: State reference \`$q20\` is missing a top-level declaration with a literal initial value. For example, add \`$q20 = ""\`.

Targeted repair hints:
- Add every missing \`$var\` before root.
- Add: \`$q1 = ""\`, \`$q2 = ""\`, \`$q3 = ""\`, \`$q4 = ""\`, \`$q5 = ""\`, \`$q6 = ""\`, \`$q7 = ""\`, \`$q8 = ""\`, \`$q9 = ""\`, \`$q10 = ""\`, \`$q11 = ""\`, \`$q12 = ""\`, \`$q13 = ""\`, \`$q14 = ""\`, \`$q15 = ""\`, \`$q16 = ""\`, \`$q17 = ""\`, \`$q18 = ""\`, \`$q19 = ""\`, \`$q20 = ""\`.
- Example for declare missing $state before root:
  WRONG: root = AppShell([Screen("main", "Draft", [Text($draft, "body", "start")])])
  OK: $draft = ""
  OK: root = AppShell([Screen("main", "Draft", [Text($draft, "body", "start")])])
- Example for multi-screen quiz pattern:
  $currentScreen = "intro"
  $answer = ""
  answerOptions = [
    { label: "3", value: "3" },
    { label: "4", value: "4" }
  ]
  
  root = AppShell([
    Screen("intro", "Quiz", [
      Button("start-quiz", "Start", "default", Action([@Set($currentScreen, "question")]), false)
    ], $currentScreen == "intro"),
    Screen("question", "Question", [
      RadioGroup("answer", "2 + 2?", $answer, answerOptions),
      Button("show-result", "Next", "default", Action([@Set($currentScreen, "result")]), $answer == "")
    ], $currentScreen == "question"),
    Screen("result", "Result", [
      Text($answer == "4" ? "Correct." : "Try again.", "title", "start"),
      Button("restart-quiz", "Restart", "secondary", Action([@Set($currentScreen, "intro"), @Reset($answer)]), false)
    ], $currentScreen == "result")
  ])

Relevant draft statement excerpts:
- root:
  root = AppShell([
    Screen("quiz", "Quiz", [
  Group("Question 1", "vertical", [
    Text("Question 1", "body", "start"),
    RadioGroup("question-1", "Question 1", $q1, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])
  ]),
  Group("Question 2", "vertical", [
    Text("Question 2", "body", "start"),
    RadioGroup("question-2", "Question 2", $q2, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])
  ]),
  Group("Question 3", "vertical", [
    Text("Question 3", "body", "start"),
    RadioGroup("question-3", "Question 3", $q3, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])
  ]),
  Group("Question 4", "vertical", [
    Text("Question 4", "body", "start"),
    RadioGroup("question-4", "Question 4", $q4, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])
  ]),
  Group("Question 5", "vertical", [
    Text("Question 5", "body", "start"),
    RadioGroup("question-5", "Question 5", $q5, [
      { label: "Yes", value: "yes" },
      { label: "No", value:…

Model draft to repair:
root = AppShell([
  Screen("quiz", "Quiz", [
Group("Question 1", "vertical", [
  Text("Question 1", "body", "start"),
  RadioGroup("question-1", "Question 1", $q1, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 2", "vertical", [
  Text("Question 2", "body", "start"),
  RadioGroup("question-2", "Question 2", $q2, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 3", "vertical", [
  Text("Question 3", "body", "start"),
  RadioGroup("question-3", "Question 3", $q3, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 4", "vertical", [
  Text("Question 4", "body", "start"),
  RadioGroup("question-4", "Question 4", $q4, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 5", "vertical", [
  Text("Question 5", "body", "start"),
  RadioGroup("question-5", "Question 5", $q5, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 6", "vertical", [
  Text("Question 6", "body", "start"),
  RadioGroup("question-6", "Question 6", $q6, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 7", "vertical", [
  Text("Question 7", "body", "start"),
  RadioGroup("question-7", "Question 7", $q7, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 8", "vertical", [
  Text("Question 8", "body", "start"),
  RadioGroup("question-8", "Question 8", $q8, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 9", "vertical", [
  Text("Question 9", "body", "start"),
  RadioGroup("question-9", "Question 9", $q9, [
    { label: "Yes", value: "yes" },…

Current critical syntax rules:
- Place the full corrected OpenUI Lang program in \`source\`. Make \`summary\` one complete user-facing sentence under 200 characters with concrete features/screens, not generic "Updated the app" text.
- Use only supported components and tools.
- Every @Run(ref) must reference a defined Query or Mutation.
- AppShell must be the single root statement; never nest AppShell and never define a second AppShell anywhere else in the source.
- Define \`$state\`, collections, derived values, Query/Mutation refs, and reusable component refs as top-level statements outside AppShell/Screen/Group child arrays.
- Component children arrays may contain only component refs or component calls, not declarations such as \`$x = ...\`, \`items = [...]\`, or \`row = Group(...)\`.
- Declare every \`$var\` that appears anywhere in the program at the top with a literal initial value, even if the draft excerpt below is truncated.

Intent-specific rules from original user request:
- Use \`Screen(id, title, children?, isActive?, appearance?)\` when you need screen-level sections.
- For internal multi-screen flows, declare \`$currentScreen = "screen-id"\` and switch screens with \`@Set($currentScreen, "next-screen-id")\`.
- Use \`$currentScreen\` + \`@Set(...)\` for screen navigation.
- Do not use persisted tools for internal screen navigation. Use tools only…"
`;

exports[`buildOpenUiRepairPrompt > truncates the draft before issues and hints when the repair prompt is over budget 1`] = `
"The previous OpenUI draft cannot be committed yet. Automatic repair attempt 1 of 1.
The draft excerpt below may be truncated. Fix every listed missing \`$var\` declaration even when some references are not visible in the excerpt.
The draft is syntactically valid but fails a product-quality check.
Use the current committed valid OpenUI source only as fallback context.
Stay close to the model draft below and fix only the listed quality issues with the smallest possible diff.
Do not rewrite unrelated parts, change unflagged behavior, or introduce new features.
Return a complete corrected program.

Original user request:
Build a 20-question quiz.

Current committed valid OpenUI source:
root = AppShell([])

Quality issues:
- undefined-state-reference in root: State reference \`$q1\` is missing a top-level declaration with a literal initial value. For example, add \`$q1 = ""\`.
- undefined-state-reference in root: State reference \`$q2\` is missing a top-level declaration with a literal initial value. For example, add \`$q2 = ""\`.
- undefined-state-reference in root: State reference \`$q3\` is missing a top-level declaration with a literal initial value. For example, add \`$q3 = ""\`.
- undefined-state-reference in root: State reference \`$q4\` is missing a top-level declaration with a literal initial value. For example, add \`$q4 = ""\`.
- undefined-state-reference in root: State reference \`$q5\` is missing a top-level declaration with a literal initial value. For example, add \`$q5 = ""\`.
- undefined-state-reference in root: State reference \`$q6\` is missing a top-level declaration with a literal initial value. For example, add \`$q6 = ""\`.
- undefined-state-reference in root: State reference \`$q7\` is missing a top-level declaration with a literal initial value. For example, add \`$q7 = ""\`.
- undefined-state-reference in root: State reference \`$q8\` is missing a top-level declaration with a literal initial value. For example, add \`$q8 = ""\`.
- undefined-state-reference in root: State reference \`$q9\` is missing a top-level declaration with a literal initial value. For example, add \`$q9 = ""\`.
- undefined-state-reference in root: State reference \`$q10\` is missing a top-level declaration with a literal initial value. For example, add \`$q10 = ""\`.
- undefined-state-reference in root: State reference \`$q11\` is missing a top-level declaration with a literal initial value. For example, add \`$q11 = ""\`.
- undefined-state-reference in root: State reference \`$q12\` is missing a top-level declaration with a literal initial value. For example, add \`$q12 = ""\`.
- undefined-state-reference in root: State reference \`$q13\` is missing a top-level declaration with a literal initial value. For example, add \`$q13 = ""\`.
- undefined-state-reference in root: State reference \`$q14\` is missing a top-level declaration with a literal initial value. For example, add \`$q14 = ""\`.
- undefined-state-reference in root: State reference \`$q15\` is missing a top-level declaration with a literal initial value. For example, add \`$q15 = ""\`.
- undefined-state-reference in root: State reference \`$q16\` is missing a top-level declaration with a literal initial value. For example, add \`$q16 = ""\`.
- undefined-state-reference in root: State reference \`$q17\` is missing a top-level declaration with a literal initial value. For example, add \`$q17 = ""\`.
- undefined-state-reference in root: State reference \`$q18\` is missing a top-level declaration with a literal initial value. For example, add \`$q18 = ""\`.
- undefined-state-reference in root: State reference \`$q19\` is missing a top-level declaration with a literal initial value. For example, add \`$q19 = ""\`.
- undefined-state-reference in root: State reference \`$q20\` is missing a top-level declaration with a literal initial value. For example, add \`$q20 = ""\`.

Targeted repair hints:
- Add every missing \`$var\` before root.
- Add: \`$q1 = ""\`, \`$q2 = ""\`, \`$q3 = ""\`, \`$q4 = ""\`, \`$q5 = ""\`, \`$q6 = ""\`, \`$q7 = ""\`, \`$q8 = ""\`, \`$q9 = ""\`, \`$q10 = ""\`, \`$q11 = ""\`, \`$q12 = ""\`, \`$q13 = ""\`, \`$q14 = ""\`, \`$q15 = ""\`, \`$q16 = ""\`, \`$q17 = ""\`, \`$q18 = ""\`, \`$q19 = ""\`, \`$q20 = ""\`.
- Example for declare missing $state before root:
  WRONG: root = AppShell([Screen("main", "Draft", [Text($draft, "body", "start")])])
  OK: $draft = ""
  OK: root = AppShell([Screen("main", "Draft", [Text($draft, "body", "start")])])
- Example for multi-screen quiz pattern:
  $currentScreen = "intro"
  $answer = ""
  answerOptions = [
    { label: "3", value: "3" },
    { label: "4", value: "4" }
  ]
  
  root = AppShell([
    Screen("intro", "Quiz", [
      Button("start-quiz", "Start", "default", Action([@Set($currentScreen, "question")]), false)
    ], $currentScreen == "intro"),
    Screen("question", "Question", [
      RadioGroup("answer", "2 + 2?", $answer, answerOptions),
      Button("show-result", "Next", "default", Action([@Set($currentScreen, "result")]), $answer == "")
    ], $currentScreen == "question"),
    Screen("result", "Result", [
      Text($answer == "4" ? "Correct." : "Try again.", "title", "start"),
      Button("restart-quiz", "Restart", "secondary", Action([@Set($currentScreen, "intro"), @Reset($answer)]), false)
    ], $currentScreen == "result")
  ])

Relevant draft statement excerpts:
- root:
  root = AppShell([
    Screen("quiz", "Quiz", [
  Group("Question 1", "vertical", [
    Text("Question 1", "body", "start"),
    RadioGroup("question-1", "Question 1", $q1, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])
  ]),
  Group("Question 2", "vertical", [
    Text("Question 2", "body", "start"),
    RadioGroup("question-2", "Question 2", $q2, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])
  ]),
  Group("Question 3", "vertical", [
    Text("Question 3", "body", "start"),
    RadioGroup("question-3", "Question 3", $q3, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])…

Model draft to repair:
root = AppShell([
  Screen("quiz", "Quiz", [
Group("Question 1", "vertical", [
  Text("Question 1", "body", "start"),
  RadioGroup("question-1", "Question 1",…

Current critical syntax rules:
- Place the full corrected OpenUI Lang program in \`source\`. Make \`summary\` one complete user-facing sentence under 200 characters with concrete features/screens, not generic "Updated the app" text.
- Use only supported components and tools.
- Every @Run(ref) must reference a defined Query or Mutation.
- AppShell must be the single root statement; never nest AppShell and never define a second AppShell anywhere else in the source.
- Define \`$state\`, collections, derived values, Query/Mutation refs, and reusable component refs as top-level statements outside AppShell/Screen/Group child arrays.
- Component children arrays may contain only component refs or component calls, not declarations such as \`$x = ...\`, \`items = [...]\`, or \`row = Group(...)\`.
- Declare every \`$var\` that appears anywhere in the program at the top with a literal initial value, even if the draft excerpt below is truncated.

Intent-specific rules from original user request:
- Use \`Screen(id, title, children?, isActive?, appearance?)\` when you need screen-level sections.
- For internal multi-screen flows, declare \`$currentScreen = "screen-id"\` and switch screens with \`@Set($currentScreen, "next-screen-id")\`.
- Use \`$currentScreen\` + \`@Set(...)\` for screen navigation.
- Do not use persisted tools for internal screen navigation. Use tools only fo…"
`;

exports[`buildOpenUiRepairPrompt > uses append_item in the todo repair hint 1`] = `
"The previous OpenUI draft cannot be committed yet. Automatic repair attempt 1 of 1.
The draft is syntactically valid but fails a product-quality check.
Use the current committed valid OpenUI source only as fallback context.
Stay close to the model draft below and fix only the listed quality issues with the smallest possible diff.
Do not rewrite unrelated parts, change unflagged behavior, or introduce new features.
Return a complete corrected program.

Original user request:
Create a todo list.

Current committed valid OpenUI source:
root = AppShell([])

Quality issues:
- quality-missing-todo-controls in root: Todo request did not generate required todo controls.

Targeted repair hints:
- For a todo request, include an input for the draft value, a persisted \`Query("read_state", ...)\`, an \`append_item\` mutation for plain-object todo rows, a button action that runs the mutation and then the query, and a repeated list rendered through \`@Each(...)\` + \`Repeater(...)\`.
- Example for interactive todo pattern:
  WRONG: root = AppShell([Screen("main", "Todo", [Text("Todo", "title", "start")])])
  OK: $draft = ""
  OK: items = Query("read_state", { path: "app.items" }, [])
  OK: addItem = Mutation("append_item", { path: "app.items", value: { title: $draft, completed: false } })
  OK: rows = @Each(items, "item", ...)
  OK: Repeater(rows, "No tasks yet.")
- Example for todo/task list pattern:
  $draft = ""
  $targetItemId = ""
  
  items = Query("read_state", { path: "app.items" }, [])
  addItem = Mutation("append_item", {
    path: "app.items",
    value: { title: $draft, completed: false }
  })
  toggleItem = Mutation("toggle_item_field", {
    path: "app.items",
    idField: "id",
    id: $targetItemId,
    field: "completed"
  })
  rows = @Each(items, "item", Group(null, "horizontal", [
    Text(item.title, "body", "start"),
    Checkbox("toggle-" + item.id, "", item.completed, null, null, Action([…

Model draft to repair:
root = AppShell([])

Current critical syntax rules:
- Place the full corrected OpenUI Lang program in \`source\`. Make \`summary\` one complete user-facing sentence under 200 characters with concrete features/screens, not generic "Updated the app" text.
- Use only supported components and tools.
- Every @Run(ref) must reference a defined Query or Mutation.
- AppShell must be the single root statement; never nest AppShell and never define a second AppShell anywhere else in the source.
- Define \`$state\`, collections, derived values, Query/Mutation refs, and reusable component refs as top-level statements outside AppShell/Screen/Group child arrays.
- Component children arrays may contain only component refs or component calls, not declarations such as \`$x = ...\`, \`items = [...]\`, or \`row = Group(...)\`.
- Mutation(...) and Query(...) must be top-level statements. Never inline them inside @Each(...), Repeater(...), component props, or other expressions.

Intent-specific rules from original user request:
- CANONICAL APP PATTERN - Persisted todo list:
- Use one persisted collection path for tasks, such as \`app.todos\`, read with \`items = Query("read_state", { path: "app.todos" }, [])\`.
- Declare local UI state up front: \`$draft = ""\` and \`$targetItemId = ""\`.
- Add rows with \`append_item\` and a plain object value such as \`{ title: $draft, completed: false }\`; after add, run the items Query and reset \`$draft\`.
- Toggle completion with \`toggle_item_field\` using \`idField: "id"\`, \`id: $targetItemId\`, and \`field: "completed"\`.
- Render rows as \`rows = @Each(visibleItemsOrItems, "item", Group(...))\`; keep the row template inline so \`item\` is in scope.
- Inside each row, use action-mode Checkbox with \`item.completed\` plus \`Action([@Set($targetItemId, item.id), @Run(toggleItem), @Run(items)])\`; do not bind controls directly to \`item.completed\`.
- Pass built rows to \`Repeater(rows, "No tasks yet")\`; never pass raw Query data directly to Repeater.
- Display-only \`Checkbox(item.completed)\` does not write back to persisted collections by i…"
`;
